force-app/main/default/objects/Adjustment__c/Adjustment__c.object-meta.xml
<CustomObject>
    <label>Adjustment</label>
    <nameField>
        <displayFormat>ADJ-{00000000}</displayFormat>
        <label>Adjustment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adjustments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>