force-app/main/default/objects/Adjustment__c/fields/Consolidated_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consolidated Invoice</label>
    <referenceTo>clcommon__Consolidated_Invoice__c</referenceTo>
    <relationshipLabel>Adjustments (Consolidated Invoice)</relationshipLabel>
    <relationshipName>Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>