force-app/main/default/objects/Adjustment__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>clcommon__Consolidated_Invoice__c</referenceTo>
    <relationshipLabel>Adjustments (Invoice)</relationshipLabel>
    <relationshipName>Adjustments1</relationshipName>
    <type>Lookup</type>
</CustomField>