force-app/main/default/objects/Adjustment__c/fields/Invoice_del__c.field-meta.xml
<CustomField>
    <fullName>Invoice_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Adjustments</relationshipLabel>
    <relationshipName>Adjustments_del</relationshipName>
    <type>Lookup</type>
</CustomField>